# wasm-in-browser

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile
http-server/: .gitignore  spin.toml
http-server/assets/: index.html
http-server/assets/js/: aggregate_worker.js  page.js
http-server/data/: Cargo.toml
http-server/data/src/: lib.rs
wasm-module/: Cargo.toml  index.html  package-lock.json
wasm-module/src/: lib.rs
