[package]
name = "wasm-module"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[build]
tartet = "wasm32-unknown-unknown"

[dependencies]
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.24"
js-sys = "0.3.66"
arrow = "49.0"
thiserror-no-std = "2.0.2"
# console_error_panic_hook = "0.1.7"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Window',
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Blob'
]

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

