[package]
name = "wasm-module"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[build]
tartet = "wasm32-unknown-unknown"

[dependencies]
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.24"
js-sys = "0.3.66"
arrow = { version = "50.0", default-features = false, features = ["ipc"] }
getrandom = { version = "0.2", features = ["js"] }
polars-core = {version = "0.36.2", default-features = false, features = ["arrow_rs"] }
polars = {version = "0.36.2", default-features = false, features = ["lazy"] }
thiserror-no-std = "2.0.2"
console_error_panic_hook = "0.1.7"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response'
]

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

