[package]
name = "data"
authors = ["Sergei Grigorev <brisk.water2596@sergapps.net>"]
description = "aggregates data for the browser component"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
arrow = "49.0"
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v2.1.0" }

[workspace]
